part3_ecr_ecs/alb.tf
#resource "aws_lb" "app_lb" {
 # name               = "flask-express-alb"
 # internal           = false
#  load_balancer_type = "application"
#  security_groups    = [aws_security_group.alb_sg.id]
#  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]
#}

#resource "aws_lb_target_group" "flask_tg" {
#  name     = "flask-tg"
 # port     = 5000
 # protocol = "HTTP"
 # vpc_id   = aws_vpc.main.id
 # target_type = "ip"
 # health_check {
  #  path = "/"
 # }
#}

#resource "aws_lb_target_group" "express_tg" {
 # name     = "express-tg"
 # port     = 3000
 # protocol = "HTTP"
  #vpc_id   = aws_vpc.main.id
 # target_type = "ip"
#  health_check {
#    path = "/"
#  }
#}

#resource "aws_lb_listener" "http" {
 # load_balancer_arn = aws_lb.app_lb.arn
 # port              = 80
 # protocol          = "HTTP"

 # default_action {
  #  type             = "forward"
 #   target_group_arn = aws_lb_target_group.express_tg.arn
 # }
#}

#resource "aws_security_group" "alb_sg" {
#  name   = "alb-sg"
 # vpc_id = aws_vpc.main.id

 # ingress {
  #  from_port   = 80
 #   to_port     = 80
  #  protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
 # }

 # egress {
  #  from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }
#}
